DefaultTbEdgeConsumerService use different constructor